--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/Consultar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/Consultar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Inventario.in_Ing_Egr_Inven_Info
 @{
-    ViewBag.Title = ("Modificar ingreso de inventario" + " con ID #" + @Model.IdNumMovi);
+    ViewBag.Title = ("Consultar egreso" + " con ID #" + @Model.IdNumMovi);
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
@@ -9,7 +9,7 @@
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 
-@using (Html.BeginForm("Modificar", "IngresoInventario", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Consultar", "EgresoInventario", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
@@ -18,7 +18,9 @@
     @Html.HiddenFor(q => q.signo)
     @Html.HiddenFor(q => q.IdMovi_inven_tipo)
     @Html.HiddenFor(q => q.IdEstadoAproba, new { @id = "IdEstadoAproba" })
-
+    @Html.HiddenFor(q => q.Nuevo, new { @id = "Nuevo" })
+    @Html.HiddenFor(q => q.Modificar, new { @id = "Modificar" })
+    @Html.HiddenFor(q => q.Anular, new { @id = "Anular" })
     if (ViewBag.mensaje != null)
     {
         <div class="alert alert-warning alert-dismissible">
@@ -40,9 +42,47 @@
     }
     <div class="row">
         <div class="col-md-12">
+            <div class="col-md-offset-8 col-md-1">
+                <div class="form-group">
+                    <div id="btnNuevo" hidden>
+                        <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","EgresoInventario",new { Area = "Inventario", IdEmpresa = Model.IdEmpresa },null)">
+                            <i class="fa fa-plus"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <div class="form-group">
+                    <div id="btnModificar" hidden>
+                        <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "EgresoInventario", new { Area = "Inventario", IdEmpresa = Model.IdEmpresa, IdSucursal = Model.IdSucursal, IdMovi_inven_tipo=Model.IdMovi_inven_tipo , IdNumMovi =Model.IdNumMovi }, null)">
+                            <i class="fa fa-edit"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <div class="form-group">
+                    <div id="btnAnular" hidden>
+                        <a type="button" class="btn btn-primary form-control" title="Anular" href="@Url.Action("Anular", "EgresoInventario", new { Area = "Inventario", IdEmpresa = Model.IdEmpresa, IdSucursal = Model.IdSucursal, IdMovi_inven_tipo=Model.IdMovi_inven_tipo , IdNumMovi =Model.IdNumMovi  }, null)">
+                            <i class="fa fa-remove"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <div class="form-group">
+                    <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
+                        <i class="fa fa-print"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
             <div class="col-md-3">
                 <div class="form-group">
-                    <label for="CodMoviInven">Código</label>
+                    <label for="CodMoviInven"># OP</label>
                     @Html.TextBoxFor(q => q.CodMoviInven, new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.CodMoviInven, "", new { @class = "text-danger" })
                 </div>
@@ -62,18 +102,9 @@
                         settings.Properties.EditFormatString = "dd/MM/yyyy";
                         settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
                         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                        settings.Properties.AllowMouseWheel = false;
                     }).GetHtml()
                         @Html.ValidationMessageFor(q => q.cm_fecha, "", new { @class = "text-danger" })
                     </div>
-                </div>
-            </div>
-            <div class="col-md-1">
-                <label for="IdImprimir"></label>
-                <div class="form-group">
-                    <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
-                        <i class="fa fa-print"></i>
-                    </button>
                 </div>
             </div>
         </div>
@@ -94,7 +125,7 @@
                     @Html.ValidationMessageFor(q => q.IdBodega, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class=" col-md-3">
                 <div class="form-group">
                     <label for="IdMotivo_Inv">Motivo*</label>
                     @Html.DropDownListFor(q => q.IdMotivo_Inv, new SelectList(ViewBag.lst_motivo, "IdMotivo_Inv", "Desc_mov_inv"), new { @class = "form-control", @id = "IdMotivo_Inv" })
@@ -111,7 +142,17 @@
             </div>
         </div>
     </div>
-
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="IdResponsable">Responsable</label>
+                    @Html.Partial("_CmbPersona_EgresoInv", Model.IdResponsable)
+                    @Html.ValidationMessageFor(q => q.IdResponsable, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
@@ -128,39 +169,45 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    @Html.Action("GridViewPartial_inv_det")
+                    @Html.Action("GridViewPartial_egr_inv_det")
+
+
                 </div>
             </div>
         </div>
     </div>
 
 
-    <div class="box-footer">
-        @if (ViewBag.MostrarBoton ?? false)
-        {
-            <button type="submit" class="btn btn-primary">Guardar</button>
-        }
 
-        <a class="btn btn-default" href="@Url.Action("Index","IngresoInventario",new { Area = "Inventario" },null)">Cancelar</a>
+    <div class="box-footer">
+        <a class="btn btn-default" href="@Url.Action("Index","EgresoInventario",new { Area = "Inventario" },null)">Cancelar</a>
     </div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
     }
 }
+
 <script type="text/javascript">
+
     $(function () {
+        MostrarBotonesAccion();
+
         $("#IdSucursal").change(function () {
             CargarBodega();
         });
     });
 
-    function OnSelectedProductoChanged(s, e) {
-            GridViewPartial_inv_det.GetEditor("IdUnidadMedida_sinConversion").PerformCallback();
+    function OnSelectedProductoChanged(s,e) {
+        if (s.GetValue() != 0) {
+            GridView_egr_inv_det.GetEditor("IdUnidadMedida_sinConversion").PerformCallback();
             SetUnidadMedida(s, e);
+        }
     }
 
     function UnidadMedidaComboBox_BeginCallback(s, e) {
+        if (s.GetValue() != 0) {
             e.customArgs["in_IdProducto"] = IdProducto.GetValue();
+        }
     }
 
     function SetUnidadMedida(s, e) {
@@ -176,7 +223,7 @@
             bProcessing: true,
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-                GridViewPartial_inv_det.GetEditor('IdUnidadMedida_sinConversion').SetValue(data.IdUnidadMedida);
+                GridView_egr_inv_det.GetEditor('IdUnidadMedida_sinConversion').SetValue(data.IdUnidadMedida_Consumo);
             },
             error: function (error) {
             }
@@ -185,6 +232,7 @@
 
     function CargarBodega() {
         $("#IdBodega").empty();
+
         var datos = {
             IdEmpresa: $("#IdEmpresa").val(),
             IdSucursal: $("#IdSucursal").val()
@@ -204,15 +252,29 @@
                     $("#IdBodega").append("<option value=" + row.IdBodega + ">" + row.bo_Descripcion + "</option>");
                 });
             },
-            error: function (error)
-            {
+            error: function (error) {
             }
         });
     };
 
     function Imprimir() {
         var location = GetPathServer();
-        var win = window.open(location +"/Reportes/InventarioReportes/INV_001?IdEmpresa="+@Core.Erp.Web.Helps.SessionFixed.IdEmpresa+"&IdSucursal="+@Model.IdSucursal+"&IdMovi_inven_tipo="+@Model.IdMovi_inven_tipo+"&IdNumMovi="+@Model.IdNumMovi, '_blank');
+        var win = window.open(location +"/Reportes/InventarioReportes/INV_002?IdEmpresa="+@Core.Erp.Web.Helps.SessionFixed.IdEmpresa+"&IdSucursal="+@Model.IdSucursal+"&IdMovi_inven_tipo="+@Model.IdMovi_inven_tipo+"&IdNumMovi="+@Model.IdNumMovi, '_blank');
         win.focus();
+    }
+
+    function MostrarBotonesAccion() {
+        if ($("#Nuevo").val() == 1)
+        {
+            $("#btnNuevo").show();
+        }
+        if ($("#Modificar").val() == 1)
+        {
+            $("#btnModificar").show();
+        }
+        if ($("#Anular").val() == 1)
+        {
+            $("#btnAnular").show();
+        }
     }
 </script>
