--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventarioOrdenCompra/Consultar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventarioOrdenCompra/Consultar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Inventario.in_Ing_Egr_Inven_Info
 @{
-    ViewBag.Title = ("Modificar ingreso por orden de compra" + " con ID #" + @Model.IdNumMovi);
+    ViewBag.Title = ("Consultar ingreso por orden de compra" + " con ID #" + @Model.IdNumMovi);
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
@@ -9,7 +9,7 @@
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 
-@using (Html.BeginForm("Modificar", "IngresoInventarioOrdenCompra", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Consultar", "IngresoInventarioOrdenCompra", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
@@ -20,6 +20,9 @@
     @Html.HiddenFor(q => q.IdMovi_inven_tipo)
     @Html.HiddenFor(q => q.CodMoviInven)
     @Html.HiddenFor(q => q.IdEstadoAproba, new { @id = "IdEstadoAproba" })
+    @Html.HiddenFor(q => q.Nuevo, new { @id = "Nuevo" })
+    @Html.HiddenFor(q => q.Modificar, new { @id = "Modificar" })
+    @Html.HiddenFor(q => q.Anular, new { @id = "Anular" })
     if (ViewBag.mensaje != null)
     {
         <div class="alert alert-warning alert-dismissible">
@@ -41,6 +44,44 @@
     }
     <div class="row">
         <div class="col-md-12">
+            <div class="col-md-offset-8 col-md-1">
+                <div class="form-group">
+                    <div id="btnNuevo" hidden>
+                        <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","IngresoInventarioOrdenCompra",new { Area = "Inventario", IdEmpresa = Model.IdEmpresa },null)">
+                            <i class="fa fa-plus"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <div class="form-group">
+                    <div id="btnModificar" hidden>
+                        <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "IngresoInventarioOrdenCompra", new { Area = "Inventario", IdEmpresa = Model.IdEmpresa, IdSucursal = Model.IdSucursal, IdMovi_inven_tipo=Model.IdMovi_inven_tipo , IdNumMovi =Model.IdNumMovi }, null)">
+                            <i class="fa fa-edit"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <div class="form-group">
+                    <div id="btnAnular" hidden>
+                        <a type="button" class="btn btn-primary form-control" title="Anular" href="@Url.Action("Anular", "IngresoInventarioOrdenCompra", new { Area = "Inventario", IdEmpresa = Model.IdEmpresa, IdSucursal = Model.IdSucursal, IdMovi_inven_tipo=Model.IdMovi_inven_tipo , IdNumMovi =Model.IdNumMovi  }, null)">
+                            <i class="fa fa-remove"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <div class="form-group">
+                    <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
+                        <i class="fa fa-print"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
             <div class="col-md-6">
                 <div class="form-group">
                     <label for="IdProveedor">Proveedor*</label>
@@ -53,14 +94,6 @@
                     <label for="IdProveedor"></label>
                     <button type="button" class="btn btn-primary form-control " onclick="CrearModificarProveedor();">
                         <i class="fa fa-external-link-square"></i>
-                    </button>
-                </div>
-            </div>
-            <div class="col-md-1">
-                <label for="IdImprimir"></label>
-                <div class="form-group">
-                    <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
-                        <i class="fa fa-print"></i>
                     </button>
                 </div>
             </div>
@@ -138,11 +171,6 @@
     </div>
 
     <div class="box-footer">
-        @if (ViewBag.MostrarBoton ?? false)
-        {
-            <button type="submit" class="btn btn-primary">Guardar</button>
-        }
-
         <a class="btn btn-default" href="@Url.Action("Index","IngresoInventarioOrdenCompra",new { Area = "Inventario" },null)">Cancelar</a>
     </div>
     @section Scripts {
@@ -151,6 +179,8 @@
 }
 <script type="text/javascript">
     $(function () {
+        MostrarBotonesAccion();
+
         $("#IdSucursal").change(function () {
             CargarBodega();
         });
@@ -166,6 +196,21 @@
     function UnidadMedidaComboBox_BeginCallback(s, e) {
         if (s.GetValue() != 0) {
             e.customArgs["in_IdProducto"] = IdProducto.GetValue();
+        }
+    }
+
+    function MostrarBotonesAccion() {
+        if ($("#Nuevo").val() == 1)
+        {
+            $("#btnNuevo").show();
+        }
+        if ($("#Modificar").val() == 1)
+        {
+            $("#btnModificar").show();
+        }
+        if ($("#Anular").val() == 1)
+        {
+            $("#btnAnular").show();
         }
     }
 
