--- a/ERP/Core.Erp.Web/Areas/Compras/Views/AprobacionOC/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/AprobacionOC/Index.cshtml
@@ -122,7 +122,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="col-md-12">
-                        @Html.Action("GridViewPartial_aprobacion_oc" })
+                        @Html.Action("GridViewPartial_aprobacion_oc")
                     </div>
                 </div>
             </div>
