--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model Core.Erp.Info.Helps.cl_filtros_Info
+﻿@model Core.Erp.Info.Helps.cl_filtros_Info
 @{
     ViewBag.Title = "Egresos";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -12,7 +11,8 @@
 
 @using (Html.BeginForm())
 {
-    @Html.HiddenFor(q=>q.IdEmpresa)
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     <div class="box">
         <div class="box-header with-border">
             <div class="row">
@@ -98,7 +98,7 @@
             </div>
         </div>
         <div class="box-body">
-            @Html.Action("GridViewPartial_egreso_inventario", new { fecha_ini = Model.fecha_ini, fecha_fin = Model.fecha_fin, IdSucursal = Model.IdSucursal })
+            @Html.Action("GridViewPartial_egreso_inventario", new { Nuevo = ViewBag.Nuevo })
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
