--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Grupo/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Grupo/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.Inventario.in_grupo_Info
 @{
     ViewBag.Title = "Consulta de grupos de producto";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -9,11 +9,15 @@
 }
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdCategoria, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdLinea, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
-    @Html.Action("GridViewPartial_grupo", new { IdEmpresa = ViewBag.IdEmpresa, IdCategoria = ViewBag.IdCategoria, IdLinea = ViewBag.IdLinea })
+    @Html.Action("GridViewPartial_grupo", new { IdEmpresa = Model.IdEmpresa, IdCategoria = Model.IdCategoria, IdLinea = Model.IdLinea, Nuevo = ViewBag.Nuevo })
 
     <div class="box-footer">
-        <a class="btn btn-default" href="@Url.Action("Index","Linea",new {IdEmpresa = ViewBag.IdEmpresa,IdCategoria = ViewBag.IdCategoria, IdLinea = ViewBag.IdLinea, Area = "Inventario" },null)">Volver</a>
+        <a class="btn btn-default" href="@Url.Action("Index","Linea",new {IdEmpresa = Model.IdEmpresa,IdCategoria = Model.IdCategoria, IdLinea = Model.IdLinea, Area = "Inventario" },null)">Volver</a>
     </div>
 
 }
