--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventario/Consultar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventario/Consultar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Inventario.in_Ing_Egr_Inven_Info
 @{
-    ViewBag.Title = ("Modificar ingreso por orden de compra" + " con ID #" + @Model.IdNumMovi);
+    ViewBag.Title = ("Consultar ingreso de inventario" + " con ID #" + @Model.IdNumMovi);
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
@@ -9,17 +9,18 @@
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 
-@using (Html.BeginForm("Modificar", "IngresoInventarioOrdenCompra", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Consultar", "IngresoInventario", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
     @Html.HiddenFor(q => q.IdSucursal)
     @Html.HiddenFor(q => q.IdNumMovi)
     @Html.HiddenFor(q => q.signo)
-    @Html.HiddenFor(q => q.IdResponsable)
     @Html.HiddenFor(q => q.IdMovi_inven_tipo)
-    @Html.HiddenFor(q => q.CodMoviInven)
     @Html.HiddenFor(q => q.IdEstadoAproba, new { @id = "IdEstadoAproba" })
+    @Html.HiddenFor(q => q.Nuevo, new { @id = "Nuevo" })
+    @Html.HiddenFor(q => q.Modificar, new { @id = "Modificar" })
+    @Html.HiddenFor(q => q.Anular, new { @id = "Anular" })
     if (ViewBag.mensaje != null)
     {
         <div class="alert alert-warning alert-dismissible">
@@ -41,23 +42,34 @@
     }
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-6">
+            <div class="col-md-offset-8 col-md-1">
                 <div class="form-group">
-                    <label for="IdProveedor">Proveedor*</label>
-                    @Html.Partial("_CmbProveedor_IngresoOrdenCompra", Model.IdResponsable)
-                    @Html.ValidationMessageFor(q => q.IdResponsable, "", new { @class = "text-danger" })
+                    <div id="btnNuevo" hidden>
+                        <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","IngresoInventario",new { Area = "Inventario", IdEmpresa = Model.IdEmpresa },null)">
+                            <i class="fa fa-plus"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="col-md-1">
                 <div class="form-group">
-                    <label for="IdProveedor"></label>
-                    <button type="button" class="btn btn-primary form-control " onclick="CrearModificarProveedor();">
-                        <i class="fa fa-external-link-square"></i>
-                    </button>
+                    <div id="btnModificar" hidden>
+                        <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "IngresoInventario", new { Area = "Inventario", IdEmpresa = Model.IdEmpresa, IdSucursal = Model.IdSucursal, IdMovi_inven_tipo=Model.IdMovi_inven_tipo , IdNumMovi =Model.IdNumMovi }, null)">
+                            <i class="fa fa-edit"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="col-md-1">
-                <label for="IdImprimir"></label>
+                <div class="form-group">
+                    <div id="btnAnular" hidden>
+                        <a type="button" class="btn btn-primary form-control" title="Anular" href="@Url.Action("Anular", "IngresoInventario", new { Area = "Inventario", IdEmpresa = Model.IdEmpresa, IdSucursal = Model.IdSucursal, IdMovi_inven_tipo=Model.IdMovi_inven_tipo , IdNumMovi =Model.IdNumMovi  }, null)">
+                            <i class="fa fa-remove"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1">
                 <div class="form-group">
                     <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
                         <i class="fa fa-print"></i>
@@ -66,13 +78,44 @@
             </div>
         </div>
     </div>
-
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-3">
+                <div class="form-group">
+                    <label for="CodMoviInven">Código</label>
+                    @Html.TextBoxFor(q => q.CodMoviInven, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.CodMoviInven, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-offset-5 col-md-2">
+                <div class="form-group">
+                    <label for="">Fecha</label>
+                    <div class="input-group date">
+                        <div class="input-group-addon">
+                            <i class="fa fa-calendar"></i>
+                        </div>
+                        @Html.DevExpress().DateEditFor(q=> q.cm_fecha, settings =>
+                    {
+                        settings.Name = "cm_fecha";
+                        settings.Properties.UseMaskBehavior = true;
+                        settings.Properties.EditFormat = EditFormat.Date;
+                        settings.Properties.EditFormatString = "dd/MM/yyyy";
+                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                        settings.Properties.AllowMouseWheel = false;
+                    }).GetHtml()
+                        @Html.ValidationMessageFor(q => q.cm_fecha, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-3">
                 <div class="form-group">
                     <label for="IdSucursal">Sucursal*</label>
-                    @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_Descripcion"), new { @class = "form-control", @id = "IdSucursal", @readonly = "readonly" })
+                    @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_Descripcion"), new { @class = "form-control", @id = "IdSucursal", @disabled = "disabled" })
                     @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -86,32 +129,18 @@
             <div class="col-md-3">
                 <div class="form-group">
                     <label for="IdMotivo_Inv">Motivo*</label>
-                    @Html.DropDownListFor(q => q.IdMotivo_Inv, new SelectList(ViewBag.lst_motivo, "IdMotivo_Inv", "Desc_mov_inv"), new { @class = "form-control", @id = "IdMotivo_Inv", @readonly="readonly" })
+                    @Html.DropDownListFor(q => q.IdMotivo_Inv, new SelectList(ViewBag.lst_motivo, "IdMotivo_Inv", "Desc_mov_inv"), new { @class = "form-control", @id = "IdMotivo_Inv" })
                     @Html.ValidationMessageFor(q => q.IdMotivo_Inv, "", new { @class = "text-danger" })
                 </div>
             </div>
 
-            <div class="col-md-offset-1 col-md-2">
+            <div class=" col-md-3">
                 <div class="form-group">
-                    <label for="">Fecha</label>
-                    <div class="input-group date">
-                        <div class="input-group-addon">
-                            <i class="fa fa-calendar"></i>
-                        </div>
-                        @Html.DevExpress().DateEditFor(q => q.cm_fecha, settings =>
-                   {
-                       settings.Name = "cm_fecha";
-                       settings.Properties.UseMaskBehavior = true;
-                       settings.Properties.EditFormat = EditFormat.Date;
-                       settings.Properties.EditFormatString = "dd/MM/yyyy";
-                       settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                       settings.Properties.AllowMouseWheel = false;
-                   }).GetHtml()
-                        @Html.ValidationMessageFor(q => q.cm_fecha, "", new { @class = "text-danger" })
-                    </div>
+                    <label for="IdMovi_inven_tipo">Tipo movimiento*</label>
+                    @Html.DropDownListFor(q => q.IdMovi_inven_tipo, new SelectList(ViewBag.lst_tipo, "IdMovi_inven_tipo", "tm_descripcion"), new { @class = "form-control", @id = "IdMovi_inven_tipo", @disabled = "disabled" })
+                    @Html.ValidationMessageFor(q => q.IdMovi_inven_tipo, "", new { @class = "text-danger" })
                 </div>
-            </div>            
+            </div>
         </div>
     </div>
 
@@ -137,13 +166,9 @@
         </div>
     </div>
 
-    <div class="box-footer">
-        @if (ViewBag.MostrarBoton ?? false)
-        {
-            <button type="submit" class="btn btn-primary">Guardar</button>
-        }
 
-        <a class="btn btn-default" href="@Url.Action("Index","IngresoInventarioOrdenCompra",new { Area = "Inventario" },null)">Cancelar</a>
+    <div class="box-footer">
+        <a class="btn btn-default" href="@Url.Action("Index","IngresoInventario",new { Area = "Inventario" },null)">Cancelar</a>
     </div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
@@ -151,22 +176,20 @@
 }
 <script type="text/javascript">
     $(function () {
+        MostrarBotonesAccion();
+
         $("#IdSucursal").change(function () {
             CargarBodega();
         });
     });
 
     function OnSelectedProductoChanged(s, e) {
-        if (s.GetValue() != 0) {
             GridViewPartial_inv_det.GetEditor("IdUnidadMedida_sinConversion").PerformCallback();
             SetUnidadMedida(s, e);
-        }
     }
 
     function UnidadMedidaComboBox_BeginCallback(s, e) {
-        if (s.GetValue() != 0) {
             e.customArgs["in_IdProducto"] = IdProducto.GetValue();
-        }
     }
 
     function SetUnidadMedida(s, e) {
@@ -182,8 +205,6 @@
             bProcessing: true,
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-                console.log(s.GetValue());
-                console.log(data.IdUnidadMedida);
                 GridViewPartial_inv_det.GetEditor('IdUnidadMedida_sinConversion').SetValue(data.IdUnidadMedida);
             },
             error: function (error) {
@@ -220,7 +241,22 @@
 
     function Imprimir() {
         var location = GetPathServer();
-        var win = window.open(location +"/Reportes/InventarioReportes/INV_017?IdEmpresa="+@Core.Erp.Web.Helps.SessionFixed.IdEmpresa+"&IdSucursal="+@Model.IdSucursal+"&IdMovi_inven_tipo="+@Model.IdMovi_inven_tipo+"&IdNumMovi="+@Model.IdNumMovi, '_blank');
+        var win = window.open(location +"/Reportes/InventarioReportes/INV_001?IdEmpresa="+@Core.Erp.Web.Helps.SessionFixed.IdEmpresa+"&IdSucursal="+@Model.IdSucursal+"&IdMovi_inven_tipo="+@Model.IdMovi_inven_tipo+"&IdNumMovi="+@Model.IdNumMovi, '_blank');
         win.focus();
+    }
+
+    function MostrarBotonesAccion() {
+        if ($("#Nuevo").val() == 1)
+        {
+            $("#btnNuevo").show();
+        }
+        if ($("#Modificar").val() == 1)
+        {
+            $("#btnModificar").show();
+        }
+        if ($("#Anular").val() == 1)
+        {
+            $("#btnAnular").show();
+        }
     }
 </script>
