--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Linea/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Linea/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.Inventario.in_linea_Info
 @{
     ViewBag.Title = "Consulta de líneas de producto";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,11 +10,13 @@
 
 @using (Html.BeginForm())
 {
-
-    @Html.Action("GridViewPartial_linea", new { IdEmpresa = ViewBag.IdEmpresa, IdCategoria = ViewBag.IdCategoria })
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdCategoria, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+    @Html.Action("GridViewPartial_linea", new { IdEmpresa = Model.IdEmpresa, IdCategoria = Model.IdCategoria, Nuevo = ViewBag.Nuevo })
 
     <div class="box-footer">
-        <a class="btn btn-default" href="@Url.Action("Index","Categoria",new {IdEmpresa = ViewBag.IdEmpresa, IdCategoria = ViewBag.IdCategoria, Area = "Inventario" },null)">Volver</a>
+        <a class="btn btn-default" href="@Url.Action("Index","Categoria",new {IdEmpresa = Model.IdEmpresa, IdCategoria = Model.IdCategoria, Area = "Inventario" },null)">Volver</a>
     </div>
 
 }
