--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using Core.Erp.Web.Helps
-
+﻿@model Core.Erp.Info.Inventario.in_Producto_Info
+@using Core.Erp.Web.Helps
 @{
     ViewBag.Title = "Consulta de productos";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -17,7 +17,8 @@
             <a class="btn btn-primary" href="@Url.Action("Importar","Producto",new { Area = "Inventario", IdEmpresa = SessionFixed.IdEmpresa },null)">Importar desde excel</a>
         </div>
     </div>
-
-    @Html.Action("GridViewPartial_producto")
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+    @Html.Action("GridViewPartial_producto", new { Nuevo = ViewBag.Nuevo })
 
 }
